--- a/main.css
+++ b/main.css
@@ -1,11 +1,65 @@
 html, body {
+  font-family: system-ui;
+  background: rgb(231,235,94);
+  background: linear-gradient(145deg, rgba(231,235,94,1) 0%, rgba(123,226,223,1) 45%, rgba(204,147,241,1) 100%);
   height: 100%;
-  background-color: darkgrey;
+  margin: 0;
 }
+
 body {
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
+
+.content {
+  background: rgb(231,235,94);
+  background: linear-gradient(145deg, rgba(231,235,94,1) 0%, rgba(123,226,223,1) 45%, rgba(204,147,241,1) 100%);
+  flex: 1; /* Allow content to take remaining space */
+  overflow-y: auto; /* Allow vertical scrolling when content overflows */
+  padding: 1rem;
+  box-sizing: border-box; /* Ensure padding is included in height calculations */
+}
+
+.headers {
+  background: rgb(228,235,97);
+  background: linear-gradient(145deg, rgba(228,235,97,1) 0%, rgba(123,226,223,1) 45%, rgba(147,203,228,1) 100%);
+  border-radius: .4rem;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.flipflop {
+  font-size:.8rem;
+  font-weight: bold;
+  border: 2px solid #ccc;
+  border-radius: .4rem;
+  padding: .2rem;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+  .flipflop.on {
+    background-color: aquamarine;
+  }
+
+  .flipflop.off {
+    background-color: lightblue;
+  }
+
+.section-header {
+  background: rgb(218,205,119);
+  background: linear-gradient(145deg, rgba(218,205,119,1) 0%, rgba(123,226,223,1) 45%, rgba(133,196,227,1) 100%);
+  border-radius: .4rem;
+  margin-bottom: .3rem;
+  padding: .4rem;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
@@ -18,18 +72,18 @@ body {
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
+
 .modal-header {
-  padding: 2px 16px ;
+  padding: 2px 16px;
   background-color: #999;
   color: black;
-  font-size: 16;
+  font-size: 16px;
 }
+
 .modal-body {
   padding: 2px 16px;
 }
-.content {
-  flex: 1 0 auto;
-}
+
 .modal-content {
   position: relative;
   background-color: #bbb;
@@ -41,107 +95,120 @@ body {
   animation-name: animatetop;
   animation-duration: 0.4s
 }
+
 #inputtxt {
-    width: 100%
+  width: 100%
 }
+
 .close {
   color: #000;
   float: right;
   font-size: 16px;
   font-weight: bold;
 }
-.close:hover,
-.close:focus {
-  color: #555;
-  text-decoration: none;
-  cursor: pointer;
-}
+
+  .close:hover,
+  .close:focus {
+    color: #555;
+    text-decoration: none;
+    cursor: pointer;
+  }
 
 @keyframes animatetop {
-  from {top: -300px; opacity: 0}
-  to {top: 0; opacity: 1}
-}
-.section-header {
-  padding: 2px 16px ;
-  background-color: #ccc;
-  color: black;
-  font-size: 16;
-}
-#footer {
-    position: relative;
-    overflow: hidden;
-}
-.wrap {
-    position: relative;
-    margin: 0 auto;
-    padding-bottom: 5px;
-    padding-top: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
-    overflow: hidden;
+  from {
+    top: -300px;
+    opacity: 0
+  }
 
+  to {
+    top: 0;
+    opacity: 1
+  }
 }
+
+#footer {
+  padding: 1rem;
+  text-align: center;
+  flex-shrink: 0; /* Prevent the footer from shrinking */
+}
+
+.wrap {
+  position: relative;
+  margin: 0 auto;
+  padding: 1rem;
+  overflow: hidden;
+}
+
 .Fsectionl {
-    float: left;
-    width: 20%;
+  float: left;
+  width: 33%;
 }
+
 .Fsectionr {
-    float: right;
-    text-align: end;
-    width: 20%;
+  float: right;
+  text-align: end;
+  width: 33%;
 }
+
 .Fsectionc {
-    overflow: hidden;
-    text-align: center;
+  overflow: hidden;
+  text-align: center;
 }
+
 .limits {
-    text-align: center;
+  text-align: center;
 }
-/*this is the W3Schools implementation of the tooltip */
+
 .tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
+  border-bottom: 1px dotted black;
 }
 
-/* Tooltip text */
-.tooltip .tooltiptext {
-  visibility: hidden;
-  width: 360px;
-  background-color: #ccc;
-  color: #000;
-  text-align: center;
-  padding: 5px 0;
-  border-radius: 6px;
-  position: absolute;
-  z-index: 1;
-}
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 360px;
+    background-color: #ccc;
+    color: #000;
+    text-align: left;
+    padding: .2rem;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+  }
 
-/* Show the tooltip text when you mouse over the tooltip container */
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-}
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
+
 .dropdown {
   position: relative;
   display: inline-block;
 }
+
 .dropdown-content {
   display: none;
   position: absolute;
   min-width: 150px;
   z-index: 1;
 }
-.dropdown-content input {
-  color: black;
-  text-decoration: none;
+
+  .dropdown-content input {
+    color: black;
+    text-decoration: none;
+    display: block;
+  }
+
+.dropdown:hover .dropdown-content {
   display: block;
 }
-.dropdown:hover .dropdown-content {display: block;}
 
 .Section {
-    padding: 10px;
-    
+  padding: 10px;
 }
+
 /*disables the scroll buttons in number fields*/
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -153,4 +220,65 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 20px;
+  background-color: rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
+  transition: all 0.3s;
+  vertical-align: middle;
+}
+
+  .switch::after {
+    content: '';
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background-color: white;
+    top: 1px;
+    left: 1px;
+    transition: all 0.3s;
+  }
+
+.checkbox:checked + .switch::after {
+  left: 20px;
+}
+
+.checkbox:checked + .switch {
+  background-color: #7983ff;
+}
+
+.checkbox {
+  display: none;
+}
+
+label {
+  vertical-align: middle;
+}
+
+select {
+  vertical-align: middle;
+}
+
+input[type=text] {
+  vertical-align: middle;
+  border-radius: .3rem;
+  border-width: .1rem;
+}
+
+input[type=number] {
+  vertical-align: middle;
+  border-radius: .3rem;
+  border-width: .1rem;
+}
+
+textarea {
+  vertical-align: middle;
+  border-radius: .3rem;
+  border-width: .1rem;
 }
